Fix serviece-adapter deployment
The resource CoCoMEDB has to be created only once 
at build time. Otherwise the start of the container
failes when trying to create a second one.

--- a/cocome-service-adapter/Dockerfile
+++ b/cocome-service-adapter/Dockerfile
@@ -1,8 +1,8 @@
 FROM airhacks/payara
 ENV ARCHIVE_NAME service-adapter-ear/target/service-adapter-ear-1.1.ear
 COPY ./service-adapter-ear/target/service-adapter-ear-1.1.ear ${DEPLOYMENT_DIR}
+RUN asadmin start-domain && \
+  asadmin create-jdbc-resource --connectionpoolid DerbyPool jdbc/CoCoMEDB && \
+  asadmin stop-domain
 ENTRYPOINT asadmin start-database && \
-    asadmin start-domain && \
-    asadmin create-jdbc-resource --connectionpoolid DerbyPool jdbc/CoCoMEDB && \
-    asadmin stop-domain && \
     asadmin start-domain --verbose ${DOMAIN_NAME}
